--- a/AzDORunner.csproj
+++ b/AzDORunner.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
+      <OperatorName>AzDORunner</OperatorName>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <LangVersion>12.0</LangVersion>
@@ -8,9 +9,11 @@
         <ImplicitUsings>true</ImplicitUsings>
         <IsPackable>false</IsPackable>
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
-        <!-- Enable CRD generation -->
-        <KubeOpsGenerateCrds>true</KubeOpsGenerateCrds>
-        <KubeOpsCrdOutputPath>$(OutputPath)crds</KubeOpsCrdOutputPath>
+        <!-- Force automatic generation for all builds -->
+        <!-- <GenerateOperatorResources>true</GenerateOperatorResources> -->
+        <KubeOpsConfigOut>$(MSBuildProjectDirectory)\config</KubeOpsConfigOut>
+        <DockerImage>mahmoudk1000/azdo-runner-operator</DockerImage>
+        <DockerImageTag>latest</DockerImageTag>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,6 +22,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="KubeOps.Operator" Version="9.11.1" />
+      <PackageReference Include="KubeOps.Operator.Web" Version="9.11.1" />
       <PackageReference Include="KubernetesClient" Version="17.0.4" />
       <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
