--- a/.github/workflows/agent.yaml
+++ b/.github/workflows/agent.yaml
@@ -62,8 +62,10 @@ jobs:
         with:
           images: ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=ref,event=tag,suffix=${{ matrix.runtime.suffix }}
+            type=ref,event=branch,suffix=${{ matrix.runtime.suffix }}
             type=raw,value=latest${{ matrix.runtime.suffix }}
-            type=raw,value={{sha}}${{ matrix.runtime.suffix }},format=short
+            type=sha,format=short,suffix=${{ matrix.runtime.suffix }}
 
       - name: Extract metadata for Docker Hub
         id: meta-dockerhub
@@ -71,8 +73,10 @@ jobs:
         with:
           images: ${{ env.DOCKERHUB_REGISTRY }}/${{ github.repository_owner }}/azdo-runner-agent
           tags: |
+            type=ref,event=tag,suffix=${{ matrix.runtime.suffix }}
+            type=ref,event=branch,suffix=${{ matrix.runtime.suffix }}
             type=raw,value=latest${{ matrix.runtime.suffix }}
-            type=raw,value={{sha}}${{ matrix.runtime.suffix }},format=short
+            type=sha,format=short,suffix=${{ matrix.runtime.suffix }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
