--- a/AzDORunner.csproj
+++ b/AzDORunner.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-      <OperatorName>AzDORunner</OperatorName>
+      <OperatorName>azdo-runner-operator</OperatorName>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <LangVersion>12.0</LangVersion>
