--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,41 +1,29 @@
+---
 name: CI
-
 on:
   push:
-    tags:
-      - "*"
-    branches:
-      - main
-    paths-ignore:
-      - "agent/**"
-      - ".github/**"
+    branches: [main]
+    paths-ignore: [agent/**, .github/**]
   workflow_dispatch:
-
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   ci:
     runs-on: ubuntu-latest
-
     if: github.event_name != 'pull_request'
-
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract metadata for GHCR
         id: meta-ghcr
         uses: docker/metadata-action@v5
@@ -44,7 +32,6 @@ jobs:
           tags: |
             type=raw,value=latest
             type=raw,value={{sha}},format=short
-
       - name: Publish Image
         uses: docker/build-push-action@v5
         with:
