--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@
 name: Release Helm Chart
 on:
   push:
-    tags: ['*']
+    tags: ["*"]
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -21,11 +21,25 @@ jobs:
           helm package chart/azdo-runner-operator --destination packaged
       - name: Create Helm repo index
         run: |
-          helm repo index packaged --url https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+          helm repo index packaged --url https://${{ github.repository_owner }}.github.io/charts
+
+      - name: Checkout GitHub Pages repo
+        uses: actions/checkout@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./packaged
-          publish_branch: gh-pages
-          force_orphan: true
+          repository: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
+          token: ${{ secrets.GH_PAGES_TOKEN }}
+          path: gh-pages
+
+      - name: Copy packaged charts to gh-pages repo
+        run: |
+          mkdir -p gh-pages/charts
+          cp -r packaged/* gh-pages/charts/
+
+      - name: Commit and push charts to GitHub Pages
+        run: |
+          cd gh-pages
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add charts
+          git commit -m "Update Helm charts" || echo "No changes to commit"
+          git push
