--- a/chart/azdo-runner-operator/Chart.yaml
+++ b/chart/azdo-runner-operator/Chart.yaml
@@ -1,6 +1,7 @@
+---
 apiVersion: v2
 name: azdo-runner-operator
 description: A Helm chart for dn-demand agent azure devops runner operator
 type: application
 version: 0.1.1
-appVersion: "0.0.1"
+appVersion: 0.0.1
