--- a/AzDORunner.csproj
+++ b/AzDORunner.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
       <OperatorName>azdo-runner-operator</OperatorName>
+      <Version>0.1.0</Version>
       <TargetFramework>net9.0</TargetFramework>
       <LangVersion>12.0</LangVersion>
       <Nullable>enable</Nullable>
