[revert] agent: base node in agent

--- a/.github/workflows/agent.yaml
+++ b/.github/workflows/agent.yaml
@@ -21,6 +21,8 @@ jobs:
             suffix: -java
           - type: dotnet
             suffix: -dotnet
+          - type: nodejs
+            suffix: -nodejs
     permissions:
       contents: read
       packages: write
